<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GUIassignmentPrototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Name">Name</string>
    <string name="Job">Job</string>
    <string name="Age">Age</string>
    <string name="TotalAmount">TotalAmount</string>
    <string name="emailAddress">emailAddress</string>
    <string name="Submit">Submit</string>
    <string name="Checkout">Checkout</string>
    <string name="Budget">Budget</string>
    <string name="Name2">Name:	</string>
    <string name="Budget2">Budget:	</string>
    <string name="TotalPrice">Total Price: </string>
    <string name="VAT">VAT: </string>
    <string name="Total">Total + VAT: </string>
	
    <string-array name="jobtitles">
        <item>Teacher</item>
        <item>Postal Worker</item>
        <item>Garda</item>
        <item>Scientist</item>
        <item>Artist</item>
        <item>Psychologist</item>
        <item>Athlete</item>
        <item>Astronaut</item>
        <item>Factory Dreg</item>
        <item>Stock Broker</item>
        <item>Hypnotist</item>
        <item>Business Analyist</item>
        <item>Boxer</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="items">
        <item>Toilet Paper</item>
        <item>Vodka</item>
        <item>Butter</item>
        <item>Bread</item>
        <item>Mince</item>
        <item>Coffee</item>
        <item>Milk</item>
        <item>Cabbage</item>
        <item>Cuccumber</item>
        <item>Potatoe</item>
        <item>Onions</item>
        <item>Ketchup</item>
        <item>Soap</item>
        <item>Toothpaste</item>
        <item>Razors</item>
        <item>Underwear</item>
        <item>Shirt</item>
    </string-array>
    
    <string-array name="prices">
        <item>10.00</item>
        <item>18.00</item>
        <item>2.00</item>
        <item>0.68</item>
        <item>3.99</item>
        <item>2.59</item>
        <item>1.49</item>
        <item>0.49</item>
        <item>0.39</item>
        <item>1.49</item>
        <item>0.69</item>
        <item>0.79</item>
        <item>1.19</item>
        <item>0.39</item>
        <item>5.29</item>
        <item>9.99</item>
        <item>14.99</item>
    </string-array>
    
    <string-array name="descriptions">
        <item>Extra soft</item>
        <item>Extra strong</item>
        <item>Extra....buttery</item>
        <item>Whole grain goodness</item>
        <item>Now with 10% less horse</item>
        <item>The trick to surviving the morning</item>
        <item>Dairy goodness brand milk</item>
        <item>We made sure to check them for insects</item>
        <item>Cuccumber</item>
        <item>Sold individually for reasons unknown</item>
        <item>Im sure theyd cry if they had to slice YOU up</item>
        <item>Dont ever call it red sauce</item>
        <item>Soap</item>
        <item>Not the kind you use, though</item>
        <item>Razors</item>
        <item>We only have 1 size</item>
        <item>Now in 1 stylish colours: magenta,</item>
    </string-array>
        <string name="YourItems">Your Items</string>
        <string name="Clear">Clear</string>
</resources>
